improves main screen

--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,7 @@
 title: Kevin McAlear
 email: kevin.mcalear@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  I love ideas, traveling, technology, wisdom, inventing, understanding systems, ultimate frisbee, leadership, wine, philosophy, humor, differences, relationships, data, & designing.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://kevinmcalear.com" # the base hostname & protocol for your site
 twitter_username: kevinmcalear
