--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@ description: > # this means to ignore newlines until "baseurl:"
   I love ideas, traveling, technology, wisdom, inventing, understanding systems, ultimate frisbee, leadership, wine, philosophy, humor, differences, relationships, data, & designing.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://kevinmcalear.com" # the base hostname & protocol for your site
-twitter_username: kevinmcalear
-github_username:  kevinmcalear
+twitter_username: KevinMcAlear
+github_username:  KevinMcAlear
 
 # Build settings
 markdown: kramdown
